# auth-manager-mailu-man

./: .gitignore  Dockerfile  Readme.md  pyproject.toml
mailu_man_mini/: config.py  lmtp_server.py  mailer.py
mailu_man_mini/mail_templates/en_us/: notify_notifier.html  notify_notifier.txt  notify_sender.html  notify_sender.txt
